ci: add ghpages deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "oct24-t2w6-interactive-react",
   "private": true,
+  "homepage": "https://alexstormwood.github.io/oct24-t2w6-interactive-react",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
